# jack-autoconnect

./: .gitignore  Cargo.toml  PKGBUILD  README.md
pkgbuild/: PKGBUILD
src/: main.rs
