[package]
name = "jack-autoconnect"
version = "0.1.0"
authors = ["shiro <shiro@usagi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
xdg = "^2.1"
json = "0.12.4"
anyhow = "1.0.40"
regex = "1.5.4"

